tests/spec/compile-fail/086_view_across_await.zn
// category: compile-fail
// profile: hosted
// purpose: non-owning views cannot be stored across await in future state

module tests.fail.viewAcrossAwait;

async fn bad(bytes: ArraySlice<U8>) -> U8 {
    val head = bytes.dropPrefix(1);
    await tick();
    return head[0]; // expected-error: ArraySlice cannot cross await into future state
}

